--- a/Drag.html
+++ b/Drag.html
@@ -3,7 +3,7 @@
 <html manifest="./cache.manifest">
 -->
 <head>
-    <title>CountrySTAT Zambia</title>
+    <title>CountrySTAT Congo</title>
     <script src="http://fenixapps.fao.org/repository/js/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
