--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html manifest="./cache.manifest">
 -->
 <head>
-    <title>CountrySTAT Zambia</title>
+    <title>CountrySTAT Congo</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
