--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <h2 class="home-tiles-title">Data Portal</h2>
 
                         <div>of the</div>
-                        <div><b>Central Statistical Office of Zambia</b></div>
+                        <div><b>Central Statistical Office of Congo</b></div>
                         <!--<div>Islamic Republic of Afghanistan</div>-->
                         <br><br>
                         <p>We use a statistical framework and applied information system for analysis and policy-making designed in order to organize, integrate and disseminate statistical data and metadata on food and agriculture coming from different sources.</p>
@@ -64,7 +64,7 @@
 
                     </div>
                     <div class="col-xs-12 col-sm-6 col-sm-height col-full-height country-details home-tile">
-                        <h1>Zambia</h1>
+                        <h1>Congo</h1>
 
                         <div class="home-stats-footer">
 
