--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html manifest="./cache.manifest">
 -->
 <head>
-    <title>CountrySTAT Congo</title>
+    <title>CountrySTAT Madagascar</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -50,8 +50,7 @@
                         <h2 class="home-tiles-title">Data Portal</h2>
 
                         <div>of the</div>
-                        <div><b>Central Statistical Office of Congo</b></div>
-                        <!--<div>Islamic Republic of Afghanistan</div>-->
+                        <div><b>Central Statistical Office of Madagascar</b></div>
                         <br><br>
                         <p>We use a statistical framework and applied information system for analysis and policy-making designed in order to organize, integrate and disseminate statistical data and metadata on food and agriculture coming from different sources.</p>
 
