--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html manifest="./cache.manifest">
 <head>
-    <title>CountrySTAT Zambia</title>
+    <title>CountrySTAT - Training</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -48,7 +48,7 @@
                         <h2 class="home-tiles-title">Data Portal</h2>
 
                         <div>of the</div>
-                        <div><b>Central Statistical Office of Zambia</b></div>
+                        <div><b>Central Statistical Office</b></div>
                         <!--<div>Islamic Republic of Afghanistan</div>-->
                         <br><br>
                         <p>We use a statistical framework and applied information system for analysis and policy-making designed in order to organize, integrate and disseminate statistical data and metadata on food and agriculture coming from different sources.</p>
@@ -62,7 +62,7 @@
 
                     </div>
                     <div class="col-xs-12 col-sm-6 col-sm-height col-full-height country-details home-tile">
-                        <h1>Zambia</h1>
+                        <h1>Training</h1>
 
                         <div class="home-stats-footer">
 
@@ -96,7 +96,7 @@
 
                     <h4>Main Partners</h4>
 
-                    <div class="partner-holder"><img src="css/img/partners/zam-logos.png" class="img-responsive"></div>
+                    <div class="partner-holder"><img src="css/img/partners/par-logos.png" class="img-responsive"></div>
 
 
                 </div>
