--- a/dev/index.template.html
+++ b/dev/index.template.html
@@ -8,5 +8,24 @@
 
 <h1>Barbara</h1>
 
+<div class="col-lg-12" id="analysis-page-content">
+
+    <!-- Open catalog btn and modules stack container-->
+    <div class="row fx-catalog-toolbar">
+
+        <div id='fx-modules-stack-container' class="col-xs-6"></div>
+
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12">
+            <div id="fx-analysis-container"></div>
+        </div>
+    </div>
+
+    <hr>
+
+</div>
+
 </body>
 </html>
