--- a/dev/data_management.template.html
+++ b/dev/data_management.template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Data Management</title>
 </head>
-<body data-country="MDG">
+<body>
 <div id="data-mng"></div>
 
 </body>
