Add static initCharts

--- a/dev/base.template.html
+++ b/dev/base.template.html
@@ -7,18 +7,9 @@
 <body>
 
 
-<div class="container">
-    <div class="col-xs-12">
-        <h1>Base</h1>
-    </div>
-</div>
+<div id="percentage-one" class="afg-home-stats" style="position: relative;"></div>
 
-<hr>
-
-<div class="container">
-    <div class="col-xs-12">
-        <div id="fx-base-container"></div>
-    </div>
-</div>
+<div id="percentage-two" class="afg-home-stats" style="position: relative;"></div>
 
 </body>
+
