--- a/dev/data_management.template.html
+++ b/dev/data_management.template.html
@@ -5,7 +5,9 @@
     <title>Data Management</title>
 </head>
 <body>
-<div id="data-mng"></div>
+
+
+<div id="data-mng" class="container-fluid"></div>
 
 </body>
 </html>
